Closed
Bug 1734716
Opened 4 years ago
Closed 4 years ago
macOS native menupopups don't follow computed color-scheme.
Categories
(Core :: Widget, defect)
Core
Widget
Tracking
()
RESOLVED
FIXED
95 Branch
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox-esr91 | --- | unaffected |
firefox92 | --- | unaffected |
firefox93 | --- | unaffected |
firefox94 | + | fixed |
firefox95 | + | fixed |
People
(Reporter: emilio, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
Markus pointed me to https://searchfox.org/mozilla-central/rev/b847c844adf49013067281d3237e7ada24325a34/widget/cocoa/nsCocoaWindow.mm#551 where we choose to follow the appearance for the window.
Flags: needinfo?(emilio)
Updated•4 years ago
|
status-firefox92:
--- → unaffected
status-firefox93:
--- → unaffected
status-firefox94:
--- → affected
status-firefox95:
--- → affected
status-firefox-esr78:
--- → unaffected
status-firefox-esr91:
--- → unaffected
tracking-firefox94:
--- → +
tracking-firefox95:
--- → +
Assignee | ||
Comment 1•4 years ago
|
||
They were following the global appearance of the window.
Assignee | ||
Updated•4 years ago
|
Flags: needinfo?(emilio)
Updated•4 years ago
|
Keywords: regression
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f5c9905b20c8
Make macOS menupopups follow color-scheme. r=mstange,mac-reviewers
Comment 3•4 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch
Comment 4•4 years ago
|
||
The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
If not please set status_beta
to wontfix
.
For more information, please visit auto_nag documentation.
Flags: needinfo?(emilio)
Assignee | ||
Comment 5•4 years ago
|
||
Harry should we uplift this?
Flags: needinfo?(emilio) → needinfo?(htwyford)
Comment 6•4 years ago
|
||
Comment on attachment 9244945 [details]
Bug 1734716 - Make macOS menupopups follow color-scheme. r=mstange,#mac-reviewers
Beta/Release Uplift Approval Request
- User impact if declined: Mac users with Balanced monochromatic themes will see low-contrast menupopups in panels and the sidebar.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Well-understood patch, narrowly scoped to Mac menupopups.
- String changes made/needed:
Flags: needinfo?(htwyford)
Attachment #9244945 -
Flags: approval-mozilla-beta?
Comment 8•4 years ago
|
||
Comment on attachment 9244945 [details]
Bug 1734716 - Make macOS menupopups follow color-scheme. r=mstange,#mac-reviewers
Approved for 94.0b5.
Attachment #9244945 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 9•4 years ago
|
||
bugherder uplift |
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•