Bug 1734716 - Make macOS menupopups follow color-scheme. r=mstange, a=RyanVM

They were following the global appearance of the window.

Differential Revision: https://phabricator.services.mozilla.com/D127931